Updated JPL0 to match Lisp integrations in EBot

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 All thanks to JQ and PiMaster for motivating me to do this :3
+JPL0 has also been integrated into EBot (http://github.com/EnKrypt/EBot/) for enhanced Bot communication
 
 Standard Functions (to be implemented):
 https://docs.google.com/document/d/10iZQ-L6S4k4P38m9rlO6fwcs8ItR_IYRdmZ6ZFIDb5E/edit
