Added read-url (reads text from the file pointed in that url) and mkdev (converts lambda to a device)

--- a/README
+++ b/README
@@ -9,3 +9,5 @@ http://havesomepi.com/lisp/
 
 JamezQ's version:
 http://jq.dyndns-free.com/PL/
+
+NOTE : This version does not strictly follow the Pl0 standard for better efficiency and ease.
